# Virtual_MIDI

./: .gitignore  CMakeLists.txt  Key_learning.cpp  README.md  annything.cpp  anything.cpp  class_python.py  hand_track.py  hand_tracking.py  header_functions.cpp  keyboard_processing.cpp  keyboard_processing.h  learning.cpp  main.cpp  open.cpp  opencv.py  preinstall.py  preinstall.sh  random_header.h  settings.json  test  test.cpp  video_processing.cpp  video_processing.h
src/: CMakeLists.txt  keyboard_processing.cpp  main.cpp
